--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
@@ -25,6 +26,7 @@
     "react-router": "^7.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "vite-plugin-remove-console": "^2.2.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
