--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
